SystemUI: Readd AmbientDisplayTile.
Change-Id: Ie7b93ba0f87d505206b5d60f193c2234d83d7eac
Signed-off-by: Josue Rivera <prbassplayer@gmail.com>

--- a/packages/SlimSystemUI/res/values/strings.xml
+++ b/packages/SlimSystemUI/res/values/strings.xml
@@ -68,6 +68,13 @@
     <string name="accessibility_quick_settings_usb_tether_changed_on">USB tethering turned on</string>
     <string name="quick_settings_usb_tether_label">USB tethering</string>
 
+    <!-- Ambient display QS tile -->
+    <string name="quick_settings_ambient_display_label">Ambient display</string>
+    <string name="accessibility_quick_settings_ambient_display_off">Ambient display off.</string>
+    <string name="accessibility_quick_settings_ambient_display_on">Ambient display on.</string>
+    <string name="accessibility_quick_settings_ambient_display_changed_off">Ambient display turned off.</string>
+    <string name="accessibility_quick_settings_ambient_display_changed_on">Ambient display turned on.</string>
+
     <!-- Slim Recents -->
     <string name="recents_multiwin_warning">A multiwindow session is already active.\nJust tap an app if you want to dock it now.</string>
     <string name="recents_multiwin_nolastapp">You removed all recents, please choose an app from launcher or drawer.</string>
