SystemUI: add caffeine qs tile
Change-Id: I5d4aa97ae63fc0bcc40f0fa7d9305efbba091029

--- a/packages/SlimSystemUI/res/values/strings.xml
+++ b/packages/SlimSystemUI/res/values/strings.xml
@@ -36,4 +36,9 @@
     <string name="dlg_cancel">Cancel</string>
     <string name="kill">Kill App</string>
 
+    <!-- Caffeine QS Tile -->
+    <string name="quick_settings_caffeine_label">Caffeine</string>
+    <string name="accessibility_quick_settings_caffeine_off">Caffeine off.</string>
+    <string name="accessibility_quick_settings_caffeine_on">Caffeine on.</string>
+
 </resources>
