--- a/res/res/values/strings.xml
+++ b/res/res/values/strings.xml
@@ -151,4 +151,7 @@
     <string name="icon_color_mode_system_icons">System icons</string>
     <string name="icon_color_mode_system_custom_icons">System and custom icons</string>
 
+    <!-- Slimseekbar -->
+    <string name="default_string">Default</string>
+
 </resources>
