SlimFramework: Fix remaining issues
  * Fix system icons not working
  * Add double tap support to DSLV and SlimActions
  * Disable validators until we find a better way to handle them
  * Change some public and private resources
  * Fix remaining key length force closes

Change-Id: Id81b764fe2e703bbfb53de87e675b8cc7272ecb9

--- a/res/res/values/strings.xml
+++ b/res/res/values/strings.xml
@@ -52,7 +52,9 @@
     <string name="shortcut_action_notifications">Notifications</string>
     <string name="shortcut_action_qs">Quicksettings panel</string>
     <string name="shortcut_action_longpress">Longpress:</string>
+    <string name="shortcut_action_doubletap">Double-Tap:</string>
     <string name="shortcut_action_select_action_longpress">Choose longpress action:</string>
+    <string name="shortcut_action_select_action_doubletap">Choose Double-Tap action:</string>
     <string name="shortcut_action_select_action">Choose action:</string>
     <string name="shortcut_action_select_action_newaction">Choose new action:</string>
     <string name="shortcut_action_reset">Reset</string>
