--- a/res/res/values/strings.xml
+++ b/res/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2013-2016 SlimRoms Project
+     Copyright (C) 2013-2017 SlimRoms Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -155,6 +155,7 @@
     <string name="shortcut_action_torch">Torch</string>
     <string name="shortcut_action_voice_search">Voice search</string>
     <string name="shortcut_action_nowontap">Google Now / Now on Tap</string>
+    <string name="shortcut_action_split_screen">Split screen</string>
 
     <!-- Icon color options -->
     <string name="icon_color_mode_all_icons">All icons</string>
