slim: We still need advanced_settings string
Change-Id: Ifb95b156f2aace6f940f7e212fe7175512bd36b0
Signed-off-by: Josue Rivera <prbassplayer@gmail.com>

--- a/packages/SlimSettings/res/values/strings.xml
+++ b/packages/SlimSettings/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="disabled">Disabled</string>
     <string name="menu_save">Save</string>
     <string name="menu_cancel">Discard</string>
+    <string name="advanced_settings">Advanced</string>
 
     <!-- Common color picker strings -->
     <string name="color_picker_reset_message">Reset color?</string>
