Slim: Refactor SlimRecents (1/2)
* Use AOSP cardview vs old cardlib
* Properly handle drawables by using ImageHelper
* Fix some missing entries when calling recents to fast after loading an app
* Add more rubost multiwindow support
   ** No longer depend on aosp recents for second window
   ** Can swipe to choose top or bottom window when starting multiwindow
* No longer reliying on cache for recents
* Fixed topmost app not correctly shown when using lastapp action
* Remove card text color (it's dynamic)
* Some cleanup

Change-Id: I25000753cd212b27478057e7ffe9284e691e5bbc
Signed-off-by: Ezio Lacandia Bijelkic <brabus84@gmail.com>
Signed-off-by: SpiritCroc <spiritcroc@gmail.com>
Signed-off-by: Josue Rivera <prbassplayer@gmail.com>

--- a/packages/SlimSystemUI/res/values/strings.xml
+++ b/packages/SlimSystemUI/res/values/strings.xml
@@ -68,4 +68,8 @@
     <string name="accessibility_quick_settings_usb_tether_changed_on">USB tethering turned on</string>
     <string name="quick_settings_usb_tether_label">USB tethering</string>
 
+    <!-- Slim Recents -->
+    <string name="recents_multiwin_warning">A multiwindow session is already active.\nJust tap an app if you want to dock it now.</string>
+    <string name="recents_multiwin_nolastapp">You removed all recents, please choose an app from launcher or drawer.</string>
+
 </resources>
