[3/3] slim: Add ProximityWake
Change-Id: I448f196ee8878fffe02f87617cc7d3984acc519c
Signed-off-by: Daniel Koman <dankoman30@gmail.com>
Signed-off-by: Jean-Pierre Rasquin <yank555.lu@gmail.com>

--- a/res/res/values/strings.xml
+++ b/res/res/values/strings.xml
@@ -196,4 +196,8 @@
     <string name="increasing_ring_min_volume_title">Start volume</string>
     <string name="increasing_ring_ramp_up_time_title">Ramp-up time</string>
 
+    <!-- Proximity wake -->
+    <string name="proximity_wake_title">Prevent accidental wake up</string>
+    <string name="proximity_wake_summary">Check the proximity sensor prior to waking up screen</string>
+
 </resources>
