--- a/packages/SlimSettings/res/values/strings.xml
+++ b/packages/SlimSettings/res/values/strings.xml
@@ -519,4 +519,16 @@
     <string name="increasing_ring_volume_option_title">Increasing ring volume</string>
     <string name="increasing_ring_min_volume_title">Start volume</string>
     <string name="increasing_ring_ramp_up_time_title">Ramp-up time</string>
+
+    <!-- Gestures -->
+    <string name="gesture_settings_title">Gestures</string>
+
+    <!-- Label for tap to wake setting [CHAR LIMIT=30] -->
+    <string name="tap_to_wake_title">Tap to wake</string>
+
+    <!-- Summary for take to wake setting [CHAR LIMIT=90] -->
+    <string name="tap_to_wake_summary">Double-tap anywhere on the screen to wake device</string>
+
+    <string name="double_tap_sleep_title">Double-tap to sleep</string>
+    <string name="double_tap_sleep_summary">Double-tap on the status bar to turn off the display</string>
 </resources>
