Update settings hooks and add Strings for lockscreen shortcuts
Change-Id: I1defbe6b937418639b3930700c063d839f00df9a

--- a/packages/SlimSettings/res/values/strings.xml
+++ b/packages/SlimSettings/res/values/strings.xml
@@ -22,6 +22,9 @@
     <string name="menu_cancel">Discard</string>
     <string name="advanced_settings">Advanced</string>
 
+    <!-- DO NOT TRANSLATE Empty summary for dynamic preferences -->
+    <string name="summary_empty" translatable="false"></string>
+
     <!-- Common color picker strings -->
     <string name="color_picker_reset_message">Reset color?</string>
 
