--- a/packages/SlimSystemUI/res/values/strings.xml
+++ b/packages/SlimSystemUI/res/values/strings.xml
@@ -79,4 +79,7 @@
     <string name="recents_multiwin_warning">A multiwindow session is already active.\nJust tap an app if you want to dock it now.</string>
     <string name="recents_multiwin_nolastapp">You removed all recents, please choose an app from launcher or drawer.</string>
 
+    <string name="lockscreen_shortcuts">Lockscreen shortcuts</string>
+    <string name="lockscreen_shortcuts_summary"> Configure shortcuts on lockscreen</string>
+
 </resources>
