--- a/packages/SlimSettings/res/values/strings.xml
+++ b/packages/SlimSettings/res/values/strings.xml
@@ -21,6 +21,9 @@
     <string name="menu_save">Save</string>
     <string name="menu_cancel">Discard</string>
     <string name="advanced_settings">Advanced</string>
+    <string name="cancel">Cancel</string>
+    <string name="reset">Reset</string>
+    <string name="reset_message">Reset all entries to default?</string>
 
     <!-- DO NOT TRANSLATE Empty summary for dynamic preferences -->
     <string name="summary_empty" translatable="false"></string>
@@ -527,5 +530,9 @@
 
      <!-- [CHAR_LIMIT=NONE] Format to put the middle items together in a series of 4 or more items in a list -->
     <string name="join_many_items_middle"><xliff:g id="added_item">%1$s</xliff:g>, <xliff:g id="rest_of_items">%2$s</xliff:g></string>
+
+    <string name="enable_gestures_title">Enable gestures</string>
+    <string name="enable_gestures_summary">Enable screen off gestures</string>
+    <string name="gestures_title">Gestures</string>
 
 </resources>
