--- a/res/res/values/strings.xml
+++ b/res/res/values/strings.xml
@@ -157,6 +157,7 @@
     <string name="shortcut_action_nowontap">Google Now / Now on Tap</string>
     <string name="shortcut_action_split_screen">Split screen</string>
     <string name="shortcut_action_doze_pulse">Doze pulse</string>
+    <string name="shortcut_action_toggle_screen">Toggle Screen on/off</string>
 
     <!-- Icon color options -->
     <string name="icon_color_mode_all_icons">All icons</string>
