Add custom gesture settings
Change-Id: I7ecc65512ccca761a5ec42631c6d2ee0111a006f

--- a/packages/SlimSettings/res/values/strings.xml
+++ b/packages/SlimSettings/res/values/strings.xml
@@ -31,6 +31,7 @@
     <!-- Slim settings screens -->
     <string name="navigation_settings_title">Navigation</string>
     <string name="interface_settings_title">Interface</string>
+    <string name="gestures_title">Gestures</string>
 
     <string name="quick_settings">Quick Settings</string>
     <string name="status_bar_icons">Status bar icons</string>
